<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="session">Смена</string>
    <string name="session_question">Закончить смену?</string>
    <string name="call">Звонок</string>
    <string name="call_question">Вы действительно хотите заказать обратный звонок?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_status_available">Статус не указан</string>
    <string name="close_cost">Стоимость закрытия:</string>
    <string name="cost_disp">Оплата диспетчерской:</string>
    <string name="ras_cost">Расчетная стоимость:</string>
    <string name="no_data">не указано</string>
    <string name="not_invited">не приглашены</string>
    <string name="no_wait">отсутсвует</string>
    <string name="no_status">не указан</string>
    <string name="load_text">Загрузка…</string>
    <string name="app_name">АБС Такси</string>
    <string name="pozivnoi">Позывной</string>
    <string name="balance">Баланс</string>
    <string name="password">Пароль</string>
    <string name="select">Выбор</string>
    <string name="noOrders">На линии достаточно машин</string>
    <string name="defaultOrder">Уведомлять о предлагаемых заказах</string>
    <string name="defaultStatus">Предлагать заказы в статусе Перерыв</string>
    <string name="Ok">Ок</string>

    <string-array name="status_array">
        <item>Свободен</item>
        <item>На заказе</item>
        <item>Перерыв</item>
        <item>Нет на линии</item>
    </string-array>
    <string-array name="class_array">
        <item>Эконом</item>
        <item>Стандарт</item>
        <item>Базовый</item>
    </string-array>
    <string-array name="payment_array">
        <item>наличные</item>
        <item>безнал.</item>
    </string-array>

    <string name="accepted">Заказ принят:</string>
    <string name="date">Время подачи:</string>
    <string name="date_invite">Время приглашения:</string>
    <string name="adress">Адрес:</string>
    <string name="where">Куда:</string>
    <string name="car_class">Класс:</string>
    <string name="cost_type">Оплата:</string>
    <string name="cost">Сумма:</string>
    <string name="cost_ride">Стоимость поездки:</string>
    <string name="result">Результат:</string>
    <string name="abonent">Абонент:</string>
    <string name="rides">Кол-во поездок:</string>
    <string name="currency">р</string>
    <string name="preliminary">Предварительный заказ</string>
    <string name="error_title">Ошибка</string>
    <string name="error_message">Ошибка на сервере. Перезапустите приложение.</string>
    <string name="close">Закрыть</string>
    <string name="drivers">Водитилей</string>
    <string name="all_drivers">Все</string>
    <string name="free_here">Свободен здесь</string>
    <string name="orders">Заказы</string>
    <string name="choose_action">Выбор действия</string>
    <string name="time">Время</string>
    <string name="accept">Принять</string>
    <string name="info">Информация</string>
    <string name="my_orders">Мои заказы</string>
    <string name="status">Статус:</string>
    <string name="free_orders">Свободные заказы</string>
    <string name="no_region">не выбран</string>
    <string name="region">Район:</string>
    <string name="call_office">Звонок из офиса</string>
    <string name="messages">Сообщения</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="exit_action">Выйти</string>
    <string name="sorry_exit">Вы действительно хотите выйти? В случае выхода вы не сможете принимать заказы.</string>
    <string name="cancel">Отменить</string>
    <string name="invite">Пригласить</string>
    <string name="delay">Опаздываю</string>
    <string name="wait_call">Ваш звонок принят. Ожидайте звонка.</string>
    <string name="invite_sended">Приглашение отправлено.</string>
    <string name="order_delayed">Заказ отложен</string>
    <string name="ended_timer">Кончилось</string>
    <string name="price">Цена</string>
    <string name="price_ride">Цена поездки</string>
    <string name="order_closed">Заказ закрыт</string>
    <string name="no_internet">Подключение к интернету отсутствует.</string>
    <string name="service">Сервис такси</string>
    <string name="service_started">Запущен сервис уведомлений такси</string>
    <string name="message">Сообщение</string>
    <string name="new_message">Новое сообщение</string>
    <string name="new_order">Новый заказ</string>
    <string name="empty_pozivnoi">Позывной не может быть пустым.</string>
    <string name="registration">Регистрация</string>
    <string name="registration_message">Введите ваш позывной или обратитесь к администратору</string>
    <string name="update">Обновление</string>
    <string name="update_message">Вышло обновление скачать?</string>
    <string name="update_delay">Позже</string>
    <string name="dont_care">Стандарт</string>
    <string name="newPozivnoi">Новый позывной</string>
    <string name="description">Примечание:</string>
    <string name="free">Свободен</string>
    <string name="unavailiable">Занят</string>
    <string name="light">Светлая*</string>
    <string name="dark">Темная*</string>
    <string name="price2">Безнал</string>
    <string name="end_point">Район:</string>
    <string name="change">Поменять</string>
    <string name="reset">Сбросить</string>

</resources>
